--- a/people.html
+++ b/people.html
@@ -8,6 +8,9 @@
     <body onload='load()'>
         <div class='header'>
             <h1>Star Wars Directory</h1>
+            <a href='index.html'>Home</a>
+            <span>People</span>
+            <a href='planets.html'>Planets</a>
         </div>
         <div class='body'>
             <input type='button' id='prevPage' onclick="prevPage()" value="<" class='pageButton' disabled>
