--- a/planets.html
+++ b/planets.html
@@ -8,6 +8,9 @@
     <body onload='load()'>
         <div class='header'>
             <h1>Star Wars Directory</h1>
+            <a href='index.html'>Home</a>
+            <a href='people.html'>People</a>
+            <span>Planets</span>
         </div>
         <div class='body'>
             <input type='button' id='prevPage' onclick="prevPage()" value="<" class='pageButton' disabled>
