--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <html>
     <head>
+        <link rel='stylesheet' type='text/css' href='site.css'>
     </head>
-    <body onload='load()'>
-        <a href='people.html'>People</a>
-        <a href='planets.html'>Planets</a>
-        <a href='ships.html'>Ships</a>
+    <body>
+        <div class='header'>
+            <h1>Star Wars Directory</h1>
+            <span>Home</span>
+            <a href='people.html'>People</a>
+            <a href='planets.html'>Planets</a>
+        </div>        
+        <div class='body'>
+            This is the home page
+        </div>
     </body>
 </html>
