--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             <span>Home</span>
             <a href='people.html'>People</a>
             <a href='planets.html'>Planets</a>
+            <a href='ships.html'>Ships</a>
         </div>        
         <div class='body'>
             This is the home page
