--- a/planets.html
+++ b/planets.html
@@ -11,6 +11,7 @@
             <a href='index.html'>Home</a>
             <a href='people.html'>People</a>
             <span>Planets</span>
+            <a href='ships.html'>Ships</a>
         </div>
         <div class='body'>
             <input type='button' id='prevPage' onclick="prevPage()" value="<" class='pageButton' disabled>
